--- a/GreenSlate.Web/SPA/Views/Shared/_Layout.cshtml
+++ b/GreenSlate.Web/SPA/Views/Shared/_Layout.cshtml
@@ -58,5 +58,12 @@
             })
             }
         </script>
+    <script data-main= "/SPA/Global/requireConfig" src="/3rdParty/require.js/require.js"></script>
+    <script>require(['requireConfig'], function () {
+            $(document).ready(function () {
+                requirejs(["app"]), function (app) {
+                    app.start();}})
+        })
+    </script>
 </body>
 </html>
